[workspace]
resolver = "2"
members = [
    "crates/isekai-utils",
    "crates/isekai-utils-mod-http",
    "crates/mywasi-flight",
    "crates/snpguest",
    "isekai-data-server",
    "mods/mod-http-data-flight",
]

[workspace.dependencies]
serde = { version = "1.0.164", features = ["derive", "rc" ] }
serde_json = "1.0.96"
wit-bindgen = "0.33.0"
ndarray = { version = "0.15.6" }
linfa-linalg = { version= "0.1.0" }
arrow = { git = "https://github.com/seera-networks/arrow-rs.git", branch = "yakiniku", default-features = false, features = ["ipc"] }
arrow-array = { git = "https://github.com/seera-networks/arrow-rs.git", branch = "yakiniku" }
arrow-flight = { git = "https://github.com/seera-networks/arrow-rs.git", branch = "yakiniku", default-features = false }
arrow-schema = { git = "https://github.com/seera-networks/arrow-rs.git", branch = "yakiniku" }
linfa = "0.7.0"
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"
statrs = "0.17.1"
anyhow = "1.0.81"
bytes = "1.5.0"
tempdir = "0.3.7"
argh = "0.1.10"
isekai-utils = { path = "./crates/isekai-utils" }
isekai-utils-mod-http = { path = "./crates/isekai-utils-mod-http" }
snpguest = { path = "./crates/snpguest" }
tonic = { version = "0.12.3", features = ["tls", "channel"] }
tonic-web = { version = "0.12.3" }
tower-http = { version = "0.6.2", default-features = false, features = ["cors"] }
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"], default-features = false }
http = "1.1.0"
async-stream = "0.3.5"
tokio-stream = { version = "0.1", features = ["full"] }
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }
chrono = "0.4.38"
parquet = { git = "https://github.com/seera-networks/arrow-rs.git", branch = "yakiniku" }
bincode = "^1.2.1"
tempfile = "3.13.0"
rand = "0.8.4"
jsonwebtoken = "9.3.0"
jwks = "0.4.0"
wasmtime = { git = "https://github.com/seera-networks/wasmtime.git", branch = "yakiniku" }
wasmtime-wasi = { git = "https://github.com/seera-networks/wasmtime.git", branch = "yakiniku" }
wasmtime-wasi-http = { git = "https://github.com/seera-networks/wasmtime.git", branch = "yakiniku" }
wasmtime-wasi-nn = { git = "https://github.com/seera-networks/wasmtime.git", branch = "yakiniku", default-features = false }
# wasmtime = "36.0.2"
# wasmtime-wasi = "36.0.2"
# wasmtime-wasi-http = "36.0.2"
# wasmtime-wasi-nn = { version = "36.0.2", default-features = false }
futures = { version = "0.3", default-features = false }
futures-concurrency = "7.6.3"
tokio = "1.41.0"
prost = { version = "0.13.1", default-features = false }
hyper = "1.0.1"
rangemap = "1.5.1"
http-body = "1.0.0"
http-body-util = "0.1.3"
wstd = { version = "0.5.3" }
wstd-macro = { version = "0.5.3" }
regex = "1.11.1"
unicode-normalization = "0.1.24"
sha2 = "0.10.8"
base64 = "0.22.1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "bmp", "png"] }
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.31"