[workspace]
resolver = "2"
members = [
    "crates/isekai-utils",
    "crates/isekai-utils-mod-http",
    "crates/mywasi-flight",
    "crates/snpguest",
    "isekai-data-server",
    "mods/mod-http-data-flight",
]

[workspace.dependencies]
anyhow = "1.0.81"
argh = "0.1.10"
arrow = { git = "https://github.com/seera-networks/arrow-rs.git", rev = "3cf3103f3bc1fe80e9676689a606c762b348a5b2", default-features = false, features = ["ipc"] }
arrow-array = { git = "https://github.com/seera-networks/arrow-rs.git", rev = "3cf3103f3bc1fe80e9676689a606c762b348a5b2" }
arrow-flight = { git = "https://github.com/seera-networks/arrow-rs.git", rev = "3cf3103f3bc1fe80e9676689a606c762b348a5b2", default-features = false }
arrow-schema = { git = "https://github.com/seera-networks/arrow-rs.git", rev = "3cf3103f3bc1fe80e9676689a606c762b348a5b2" }
async-stream = "0.3.5"
base64 = "0.22.1"
bincode = "^1.2.1"
bytes = "1.5.0"
chrono = "0.4.38"
csv = "1.2.2"
futures = { version = "0.3", default-features = false }
http = "1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "bmp", "png"] }
isekai-utils = { path = "./crates/isekai-utils" }
isekai-utils-mod-http = { path = "./crates/isekai-utils-mod-http" }
jsonwebtoken = "9.3.0"
jwks = "0.4.0"
parquet = { git = "https://github.com/seera-networks/arrow-rs.git", rev = "3cf3103f3bc1fe80e9676689a606c762b348a5b2" }
prost = { version = "0.14.3", default-features = false }
rand = "0.8.4"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive", "rc" ] }
serde_json = "1.0.96"
sha2 = "0.10.8"
snpguest = { path = "./crates/snpguest" }
tempdir = "0.3.7"
tempfile = "3.13.0"
tokio = "1.41.0"
tokio-stream = { version = "0.1", features = ["full"] }
tonic = { version = "0.14.3", features = ["tls-aws-lc", "channel"] }
tonic-web = { version = "0.14.3" }
tower-http = { version = "0.6.2", default-features = false, features = ["cors"] }
wasi = "0.14.0"
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"
wit-bindgen = "0.33.0"
wstd = { version = "0.5.3" }
wstd-macro = { version = "0.5.3" }
