[package]
name = "isekai-data-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true }
argh = "0.1.10"
tonic = { workspace = true }
prost = "0.12.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { workspace = true }
tonic-reflection = "0.10.2"
async-stream = { workspace = true }
futures = "0.3.30"
arrow = { workspace = true }
arrow-flight = { workspace = true}
arrow-schema = { workspace = true}
sha2 = "0.10.8"
serde = { workspace = true }
serde_json = {workspace = true }
base64 = "0.22.1"
bytes.workspace = true
csv = "1.2.2"
once_cell = "1.18.0"
tempfile = { workspace = true }
snpguest = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
jwks = { workspace = true }
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
isekai-utils = { workspace = true }
regex = { workspace = true }
