[package]
name = "isekai-data-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
isekai-utils = { workspace = true }
jsonwebtoken = { workspace = true }
jwks = { workspace = true }
parquet = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true }
sha2 = { workspace = true }
snpguest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true }
