[package]
name = "isekai-utils-mod-http"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, features = [] }
anyhow = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
wstd = { workspace = true }
