[package]
name = "isekai-utils-mod-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true, features = [] }
bytes = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
wstd = { workspace = true }
