[package]
name = "isekai-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = {workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true, features = [] }
anyhow = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
image = { workspace = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tempdir = { workspace = true }
tempfile = "3.12.0"
