[package]
name = "isekai-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true, features = [] }
bytes = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true }
sha2 = { workspace = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tempdir = { workspace = true }
tempfile = { workspace = true }
