[package]
name = "wasmtime-mywasi-flight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
async-stream = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
snpguest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
