[package]
name = "mod-http-data-flight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
isekai-utils = { workspace = true }
isekai-utils-mod-http = { workspace = true }
wasi = { workspace = true }
wit-bindgen = { workspace = true}
wstd = { workspace = true }
wstd-macro = { workspace = true }
